# SunoReady

./: .env  .gitignore  .replit  BUILD_INFO.md  PROJECT_ORGANIZATION_PLAN.md  README.md  app.py  audio_processor_dll.py  audio_utils.py  basit_hiz_testi.py  check_dll_deps.py  compile_dll.bat  config.json  integration_guide.py  launch.bat  lightning_processor.py  metadata_utils.py  organize_output_files.py  organize_project.py  pyrightconfig.json  quick_performance_test.py  quick_test.py  requirements.txt  run.py  run_pitch_tests.py  setup_dll.bat  sunoready_cli.py  test_dll_integration.py  test_errors.txt  theme_config.json  yt_downloader.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general.yml
.github/workflows/: build.yml  ci.yml
config/: config.json  pyproject.toml
debug/: debug_auto_restart.py  debug_current_bug.py  live_audio_preview.py  live_audio_preview_demo.py  performance_analysis.py  performance_benchmark.py  performance_comparison.py
docs/: COMPACT_DESIGN_COMPLETE.md  DLL_INTEGRATION_COMPLETE.md  DLL_PITCH_SHIFTING.md  FIXED_SMALL_MONITOR_ISSUE.md  GITHUB_ACTIONS_BUILD_GUIDE.md  LIVE_PREVIEW_REMOVED.md  NEW_FEATURES.md  PITCH_CONTROL_GUIDE.md  PITCH_SHIFTING_TESTS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_ORGANIZATION_PLAN.md  PROJECT_UPDATE_COMPLETE.md  README.md  RESPONSIVE_DESIGN_UPDATE.md  SUNO_BYPASS_GUIDE.md  THEME_UPDATE.md
output/: .gitkeep
output/processed/: .gitkeep
scripts/: compile_dll.bat  exact_integration_steps.py  final_test.py  fix_dll.bat  launch.bat  setup_dll.bat
src/: app.py  audio_processor_dll.py  audio_utils.py  fast_processor.py  lightning_processor.py  version.py  yt_downloader.py
tests/: test_audio_devices.py  test_compact_design.py  test_demo_startstop.py  test_force_compact.py  test_microphone.py  test_microphone_advanced.py  test_pitch_shifting.py  test_responsive_design.py
